--- a/demo/index.html
+++ b/demo/index.html
@@ -29,10 +29,10 @@
             --dile-select-border-color: #369;
           }
         </style>
-        <div class="con-borde-y-redondeado">
+        <div class="con-borde-y-redondeado" @dile-select-changed="${e => console.log('...', e.target.name) }">
           <h2>Regular uninitialized component</h2> 
           <p>The component is uninitialized, so the placeholder apears and initial value is undefined.</p>
-          <dile-select label="Choose your best option:" placeholder="Select one" uninitialized @dile-select-changed="${e => {
+          <dile-select name="firstselect" label="Choose your best option:" placeholder="Select one" uninitialized @dile-select-changed="${e => {
             document.getElementById('msg').innerText = `Seleccionado ${e.detail.selectedText} (value: ${e.detail.value})`;
           }}">
             <dile-select-item value="one">First item</dile-select-item>
@@ -187,6 +187,26 @@
             <dile-select-item value="passion_fruit">Passion fruit</dile-select-item>
           </dile-select>
         </div>
+
+        <h2>Initial value configured to invalid</h2>
+          <p>Initialized by setting the dile-select "value" property to "xxxx" (this value does not exists in the select item elements, so, the result is the same as the component would uninitialized)</p>
+          <dile-select value="xxxx" placeholder="Select a fruit">
+            <dile-select-item value="kiwi">Kiwi fruit</dile-select-item>
+            <dile-select-item value="pear">Pear</dile-select-item>
+            <dile-select-item value="apple">Apple</dile-select-item>
+            <dile-select-item value="orange">Orange</dile-select-item>
+            <dile-select-item value="passion_fruit">True passion fruit</dile-select-item>
+          </dile-select>
+
+        <h2>Errored select</h2>
+          <dile-select errored>
+            <dile-select-item value="kiwi">Kiwi fruit</dile-select-item>
+            <dile-select-item value="pear">Pear</dile-select-item>
+            <dile-select-item value="apple">Apple</dile-select-item>
+            <dile-select-item value="orange">Orange</dile-select-item>
+            <dile-select-item value="passion_fruit">True passion fruit</dile-select-item>
+          </dile-select>
+
         <h1>More info...</h1> 
         <p>
           You will find more information in Github: 
