options max-height

--- a/demo/index.html
+++ b/demo/index.html
@@ -40,7 +40,18 @@
             <dile-select-item value="kiwi">Kiwi fruit</dile-select-item>
             <dile-select-item value="pear">Pear</dile-select-item>
             <dile-select-item value="apple">Apple</dile-select-item>
+            <dile-select-item value="pineapple">Pineapple</dile-select-item>
+            <dile-select-item value="grapes">Grapes</dile-select-item>
+            <dile-select-item value="blueberry">Blueberry</dile-select-item>
+            <dile-select-item value="melon">Melon</dile-select-item>
+            <dile-select-item value="watermelon">Watermelon</dile-select-item>
+            <dile-select-item value="strawberry">Strawberry</dile-select-item>
+            <dile-select-item value="banana">Banana</dile-select-item>
             <dile-select-item value="orange">Orange</dile-select-item>
+            <dile-select-item value="coconut">Coconut</dile-select-item>
+            <dile-select-item value="apricot">Apricot</dile-select-item>
+            <dile-select-item value="cherry">Cherry</dile-select-item>
+            <dile-select-item value="lemon">Lemon</dile-select-item>
             <dile-select-item value="passion_fruit">True passion fruit</dile-select-item>
           </dile-select>
 
